[gd_scene load_steps=3 format=3 uid="uid://dgnm22w7h66ab"]

[ext_resource type="Script" path="res://scripts/ui/hud.gd" id="1_hud"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_1"]
bg_color = Color(1, 0.6, 0.2, 1)

[node name="HUD" type="CanvasLayer"]
script = ExtResource("1_hud")

[node name="ScoreLabel" type="Label" parent="."]
offset_left = 20.0
offset_top = 20.0
offset_right = 200.0
offset_bottom = 50.0
theme_override_font_sizes/font_size = 24
text = "Score: 0"

[node name="VoicesLabel" type="Label" parent="."]
offset_left = 20.0
offset_top = 60.0
offset_right = 200.0
offset_bottom = 90.0
theme_override_font_sizes/font_size = 24
text = "Voices: 0"

[node name="TimeLabel" type="Label" parent="."]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -100.0
offset_top = 20.0
offset_right = 100.0
offset_bottom = 50.0
grow_horizontal = 2
theme_override_font_sizes/font_size = 24
text = "Time: 03:00"
horizontal_alignment = 1

[node name="ChargeBar" type="ProgressBar" parent="."]
offset_left = 20.0
offset_top = 100.0
offset_right = 220.0
offset_bottom = 120.0
theme_override_styles/fill = SubResource("StyleBoxFlat_1")
value = 0.0
show_percentage = false

[node name="ChargeLabel" type="Label" parent="."]
offset_left = 20.0
offset_top = 125.0
offset_right = 150.0
offset_bottom = 145.0
theme_override_font_sizes/font_size = 16
text = "Shockwave Charge"

[node name="HonestyIndicator" type="Label" parent="."]
visible = false
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -100.0
offset_top = 60.0
offset_right = 100.0
offset_bottom = 90.0
grow_horizontal = 2
theme_override_colors/font_color = Color(1, 0.8, 0.2, 1)
theme_override_font_sizes/font_size = 20
text = "HONESTY BLAST READY!"
horizontal_alignment = 1
